Blender crash while playing/baking the rigid body with force field simulation #62938

Closed
opened 2019-03-25 19:56:15 +01:00 by Luja Rajbhandari · 7 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: Intel(R) UHD Graphics 630 Intel 4.5.0 - Build 23.20.16.4982

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 00:55, hash: 07f6be87a9
Worked: (optional)

Short description of error
Blender crash while playing/baking the rigid body with force field simulation.

Exact steps for others to reproduce the error
Add a cube(move up above the grid), a plane and assign active and passive rigid body respectively.
Add another plane, scale it(edit mode) and move it slightly downwards just below the first passive plane.
Then, add a force field to the scaled plane, set field shape to 'surface'. Assign the strength value to -98.1.
Disable the default gravity.
Press play/bake(wait a while, it could crash at any moment).

Here's the blend file:
2.8 test.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: Intel(R) UHD Graphics 630 Intel 4.5.0 - Build 23.20.16.4982 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 00:55, hash: `07f6be87a9` Worked: (optional) **Short description of error** Blender crash while playing/baking the rigid body with force field simulation. **Exact steps for others to reproduce the error** Add a cube(move up above the grid), a plane and assign active and passive rigid body respectively. Add another plane, scale it(edit mode) and move it slightly downwards just below the first passive plane. Then, add a force field to the scaled plane, set field shape to 'surface'. Assign the strength value to -98.1. Disable the default gravity. Press play/bake(wait a while, it could crash at any moment). Here's the blend file: [2.8 test.blend](https://archive.blender.org/developer/F6882163/2.8_test.blend)

Added subscriber: @LujaRajbhandari

Added subscriber: @LujaRajbhandari
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

I confirm it crashes and i get this error:

Dependency cycle detected:
  'OBPlane.POINT_CACHE_RESET()' depends on 'OBPlane.TRANSFORM_SIMULATION_INIT()' through 'Transform Simulation -> Point Cache'
  'OBPlane.TRANSFORM_SIMULATION_INIT()' depends on 'OBPlane.POINT_CACHE_RESET()' through 'Point Cache -> Rigid Body'
Dependency cycle detected:
  'OBCube.POINT_CACHE_RESET()' depends on 'OBCube.TRANSFORM_SIMULATION_INIT()' through 'Transform Simulation -> Point Cache'
  'OBCube.TRANSFORM_SIMULATION_INIT()' depends on 'OBCube.POINT_CACHE_RESET()' through 'Point Cache -> Rigid Body'
Detected 2 dependency cycles
I confirm it crashes and i get this error: ``` Dependency cycle detected: 'OBPlane.POINT_CACHE_RESET()' depends on 'OBPlane.TRANSFORM_SIMULATION_INIT()' through 'Transform Simulation -> Point Cache' 'OBPlane.TRANSFORM_SIMULATION_INIT()' depends on 'OBPlane.POINT_CACHE_RESET()' through 'Point Cache -> Rigid Body' Dependency cycle detected: 'OBCube.POINT_CACHE_RESET()' depends on 'OBCube.TRANSFORM_SIMULATION_INIT()' through 'Transform Simulation -> Point Cache' 'OBCube.TRANSFORM_SIMULATION_INIT()' depends on 'OBCube.POINT_CACHE_RESET()' through 'Point Cache -> Rigid Body' Detected 2 dependency cycles ```

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-26 15:35:21 +01:00

Backtrace:

Thread 27 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffd57fc700 (LWP 3918)]
0x00005555581201ad in mesh_looptri_nearest_point (userdata=0x7fffe65e9a58, index=0, co=0x7fffd57f9df0, nearest=0x7fffd57f9c54)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/bvhutils.c:132
132		    vert[data->loop[lt->tri[0]].v].co,
(gdb) bt
#0  0x00005555581201ad in mesh_looptri_nearest_point (userdata=0x7fffe65e9a58, index=0, co=0x7fffd57f9df0, nearest=0x7fffd57f9c54)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/bvhutils.c:132
#1  0x00005555586539a7 in dfs_find_nearest_dfs (data=0x7fffd57f9c00, node=0x7fffd07c9b08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_kdopbvh.c:1276
#2  0x0000555558653aa7 in dfs_find_nearest_dfs (data=0x7fffd57f9c00, node=0x7fffd07c9b48)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_kdopbvh.c:1292
#3  0x0000555558653bc6 in dfs_find_nearest_begin (data=0x7fffd57f9c00, node=0x7fffd07c9b48)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_kdopbvh.c:1312
#4  0x0000555558653fd8 in BLI_bvhtree_find_nearest_ex (tree=0x7fffeac22848, co=0x7fffd57f9df0, nearest=0x7fffd57f9d20,
    callback=0x55555812014e <mesh_looptri_nearest_point>, userdata=0x7fffe65e9a58, flag=0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_kdopbvh.c:1393
#5  0x0000555558654066 in BLI_bvhtree_find_nearest (tree=0x7fffeac22848, co=0x7fffd57f9df0, nearest=0x7fffd57f9d20,
    callback=0x55555812014e <mesh_looptri_nearest_point>, userdata=0x7fffe65e9a58)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_kdopbvh.c:1409
#6  0x00005555581b225c in closest_point_on_surface (surmd=0x7fffd07c9988, co=0x7fffd57f9df0, surface_co=0x7fffd57f9ea0, surface_nor=0x7fffd57f9eac,
    surface_vel=0x0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/effect.c:564
#7  0x00005555581b2538 in get_effector_data (eff=0x7fffd2a27008, efd=0x7fffd57f9ea0, point=0x7fffd57f9f90, real_velocity=0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/effect.c:604
#8  0x00005555581b4014 in BKE_effectors_apply (effectors=0x7fffd2a00088, colliders=0x0, weights=0x7fffd9e9d048, point=0x7fffd57f9f90, force=0x7fffd57f9fec,
    impulse=0x0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/effect.c:1040
#9  0x00005555582fbc9c in rigidbody_update_sim_ob (depsgraph=0x7fffe660c808, scene=0x7fffd9fbb408, rbw=0x7fffd9e9d2e8, ob=0x7fffe6657808, rbo=0x7fffd9e9d108)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/rigidbody.c:1385
#10 0x00005555582fc0d2 in rigidbody_update_simulation (depsgraph=0x7fffe660c808, scene=0x7fffd9fbb408, rbw=0x7fffd9e9d2e8, rebuild=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/rigidbody.c:1486
#11 0x00005555582fcf34 in BKE_rigidbody_do_simulation (depsgraph=0x7fffe660c808, scene=0x7fffd9fbb408, ctime=5)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/rigidbody.c:1748
#12 0x00005555582fd188 in BKE_rigidbody_eval_simulation (depsgraph=0x7fffe660c808, scene=0x7fffd9fbb408)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/rigidbody.c:1830
#13 0x0000555558703d8d in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*), Depsgraph*, Scene*&> (__f=
    @0x7fffeba70240: 0x5555582fd110 <BKE_rigidbody_eval_simulation>, __args#0=@0x7fffd57fa350: 0x7fffe660c808, __args#1=@0x7fffeba70248: 0x7fffd9fbb408)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/invoke.h:60
#14 0x00005555587029c4 in std::__invoke<void (*&)(Depsgraph*, Scene*), Depsgraph*, Scene*&> (__fn=
    @0x7fffeba70240: 0x5555582fd110 <BKE_rigidbody_eval_simulation>, __args#0=@0x7fffd57fa350: 0x7fffe660c808, __args#1=@0x7fffeba70248: 0x7fffd9fbb408)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/invoke.h:95
- 15 0x0000555558701278 in std::_Bind<void (*(std::_Placeholder<1>, Scene*))(Depsgraph*, Scene*)>::__call<void, Depsgraph*&&, 0ul, 1ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul>) (this=0x7fffeba70240, __args=...) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/functional:400
- 16 0x00005555586ff3fa in std::_Bind<void (*(std::_Placeholder<1>, Scene*))(Depsgraph*, Scene*)>::operator()<Depsgraph*, void>(Depsgraph*&&) (
    this=0x7fffeba70240, __args#0=@0x7fffd57fa350: 0x7fffe660c808) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/functional:484
#17 0x00005555586fc604 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*))(Depsgraph*, Scene*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd57fa350: 0x7fffe660c808)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/std_function.h:297
#18 0x0000555558717b41 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffd07c85c0, __args#0=0x7fffe660c808)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/std_function.h:687
#19 0x000055555871711f in DEG::deg_task_run_func (pool=0x7fffda538e88, taskdata=0x7fffd07c8548, thread_id=4)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:88
#20 0x00005555586d30e8 in handle_local_queue (thread_id=4, tls=0x7fffda1e7358)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:417
- 21 task_scheduler_thread_run (thread_p=0x7fffda1e7348) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:446
- 22 0x00007ffff65763c3 in start_thread () from /lib64/libpthread.so.0
#23 0x00007ffff27123ef in clone () from /lib64/libc.so.6

@Sergey feel free to reassign if this is not for you.

Backtrace: ``` Thread 27 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffd57fc700 (LWP 3918)] 0x00005555581201ad in mesh_looptri_nearest_point (userdata=0x7fffe65e9a58, index=0, co=0x7fffd57f9df0, nearest=0x7fffd57f9c54) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/bvhutils.c:132 132 vert[data->loop[lt->tri[0]].v].co, (gdb) bt #0 0x00005555581201ad in mesh_looptri_nearest_point (userdata=0x7fffe65e9a58, index=0, co=0x7fffd57f9df0, nearest=0x7fffd57f9c54) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/bvhutils.c:132 #1 0x00005555586539a7 in dfs_find_nearest_dfs (data=0x7fffd57f9c00, node=0x7fffd07c9b08) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_kdopbvh.c:1276 #2 0x0000555558653aa7 in dfs_find_nearest_dfs (data=0x7fffd57f9c00, node=0x7fffd07c9b48) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_kdopbvh.c:1292 #3 0x0000555558653bc6 in dfs_find_nearest_begin (data=0x7fffd57f9c00, node=0x7fffd07c9b48) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_kdopbvh.c:1312 #4 0x0000555558653fd8 in BLI_bvhtree_find_nearest_ex (tree=0x7fffeac22848, co=0x7fffd57f9df0, nearest=0x7fffd57f9d20, callback=0x55555812014e <mesh_looptri_nearest_point>, userdata=0x7fffe65e9a58, flag=0) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_kdopbvh.c:1393 #5 0x0000555558654066 in BLI_bvhtree_find_nearest (tree=0x7fffeac22848, co=0x7fffd57f9df0, nearest=0x7fffd57f9d20, callback=0x55555812014e <mesh_looptri_nearest_point>, userdata=0x7fffe65e9a58) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_kdopbvh.c:1409 #6 0x00005555581b225c in closest_point_on_surface (surmd=0x7fffd07c9988, co=0x7fffd57f9df0, surface_co=0x7fffd57f9ea0, surface_nor=0x7fffd57f9eac, surface_vel=0x0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/effect.c:564 #7 0x00005555581b2538 in get_effector_data (eff=0x7fffd2a27008, efd=0x7fffd57f9ea0, point=0x7fffd57f9f90, real_velocity=0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/effect.c:604 #8 0x00005555581b4014 in BKE_effectors_apply (effectors=0x7fffd2a00088, colliders=0x0, weights=0x7fffd9e9d048, point=0x7fffd57f9f90, force=0x7fffd57f9fec, impulse=0x0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/effect.c:1040 #9 0x00005555582fbc9c in rigidbody_update_sim_ob (depsgraph=0x7fffe660c808, scene=0x7fffd9fbb408, rbw=0x7fffd9e9d2e8, ob=0x7fffe6657808, rbo=0x7fffd9e9d108) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/rigidbody.c:1385 #10 0x00005555582fc0d2 in rigidbody_update_simulation (depsgraph=0x7fffe660c808, scene=0x7fffd9fbb408, rbw=0x7fffd9e9d2e8, rebuild=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/rigidbody.c:1486 #11 0x00005555582fcf34 in BKE_rigidbody_do_simulation (depsgraph=0x7fffe660c808, scene=0x7fffd9fbb408, ctime=5) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/rigidbody.c:1748 #12 0x00005555582fd188 in BKE_rigidbody_eval_simulation (depsgraph=0x7fffe660c808, scene=0x7fffd9fbb408) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/rigidbody.c:1830 #13 0x0000555558703d8d in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*), Depsgraph*, Scene*&> (__f= @0x7fffeba70240: 0x5555582fd110 <BKE_rigidbody_eval_simulation>, __args#0=@0x7fffd57fa350: 0x7fffe660c808, __args#1=@0x7fffeba70248: 0x7fffd9fbb408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/invoke.h:60 #14 0x00005555587029c4 in std::__invoke<void (*&)(Depsgraph*, Scene*), Depsgraph*, Scene*&> (__fn= @0x7fffeba70240: 0x5555582fd110 <BKE_rigidbody_eval_simulation>, __args#0=@0x7fffd57fa350: 0x7fffe660c808, __args#1=@0x7fffeba70248: 0x7fffd9fbb408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/invoke.h:95 - 15 0x0000555558701278 in std::_Bind<void (*(std::_Placeholder<1>, Scene*))(Depsgraph*, Scene*)>::__call<void, Depsgraph*&&, 0ul, 1ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul>) (this=0x7fffeba70240, __args=...) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/functional:400 - 16 0x00005555586ff3fa in std::_Bind<void (*(std::_Placeholder<1>, Scene*))(Depsgraph*, Scene*)>::operator()<Depsgraph*, void>(Depsgraph*&&) ( this=0x7fffeba70240, __args#0=@0x7fffd57fa350: 0x7fffe660c808) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/functional:484 #17 0x00005555586fc604 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*))(Depsgraph*, Scene*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd57fa350: 0x7fffe660c808) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/std_function.h:297 #18 0x0000555558717b41 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffd07c85c0, __args#0=0x7fffe660c808) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/std_function.h:687 #19 0x000055555871711f in DEG::deg_task_run_func (pool=0x7fffda538e88, taskdata=0x7fffd07c8548, thread_id=4) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:88 #20 0x00005555586d30e8 in handle_local_queue (thread_id=4, tls=0x7fffda1e7358) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:417 - 21 task_scheduler_thread_run (thread_p=0x7fffda1e7348) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:446 - 22 0x00007ffff65763c3 in start_thread () from /lib64/libpthread.so.0 #23 0x00007ffff27123ef in clone () from /lib64/libc.so.6 ``` @Sergey feel free to reassign if this is not for you.

This issue was referenced by 1def03d797

This issue was referenced by 1def03d797fcba6f01d17596e9950e727e4b3037

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62938
No description provided.